--- a/Demos/Editors/Wisej.DemoBrowser.DomainUpDown/Labels.resx
+++ b/Demos/Editors/Wisej.DemoBrowser.DomainUpDown/Labels.resx
@@ -117,6 +117,236 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="domainUpDown8.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAABfAgAA8v///yoCAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAATAAAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown9.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAAAXAgAA8v///+IBAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAlAAAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown7.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkBFNpemUITG9jYXRpb24GTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        E1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAADPAQAA8v///5oBAAAF+f///xNTeXN0
+        ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAFICAAA1AAAABfj///8UU3lzdGVt
+        LkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAAAwAAANwAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown4.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAACHAQAA8v///2kBAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAJAEAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAAB4AAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown3.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAABWAQAA8v///yEBAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAVQEAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown5.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAAAOAQAA8v///94AAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAnQEAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADAAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown6.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkBFNpemUITG9jYXRpb24GTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        E1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAADLAAAA8v///5YAAAAF+f///xNTeXN0
+        ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAFICAAA1AAAABfj///8UU3lzdGVt
+        LkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAAAwAAAOABAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown2.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAACDAAAA8v///2UAAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAKAIAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAAB4AAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown10.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAABSAAAA8v///x0AAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAWQIAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown11.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAAAKAAAA8v///9X///8F+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAAoQIAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="domainUpDown12.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkBFNpemUITG9jYXRpb24GTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        E1N5c3RlbS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAADC////8v///43///8F+f///xNTeXN0
+        ZW0uRHJhd2luZy5TaXplAgAAAAV3aWR0aAZoZWlnaHQAAAgIAwAAAFICAAA1AAAABfj///8UU3lzdGVt
+        LkRyYXdpbmcuUG9pbnQCAAAAAXgBeQAACAgDAAAAAwAAAOkCAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAAEAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
+  <data name="flowLayoutPanel1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQUAAAAETmFtZQREb2Nr
+        BFNpemUITG9jYXRpb24KU2Nyb2xsQmFycwEEBAQEE1dpc2VqLldlYi5Eb2NrU3R5bGUCAAAAE1N5c3Rl
+        bS5EcmF3aW5nLlNpemUDAAAAFFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABRXaXNlai5XZWIuU2Nyb2xs
+        QmFycwIAAAACAAAABgQAAAAFUGhvbmUF+////xNXaXNlai5XZWIuRG9ja1N0eWxlAQAAAAd2YWx1ZV9f
+        AAgCAAAABQAAAAX6////E1N5c3RlbS5EcmF3aW5nLlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAA
+        WAIAALwCAAAF+f///xRTeXN0ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAAAAAAAAAAAAAX4
+        ////FFdpc2VqLldlYi5TY3JvbGxCYXJzAQAAAAd2YWx1ZV9fAAgCAAAABAAAAAs=
+</value>
+  </data>
+  <data name="domainUpDown1.ResponsiveProfiles" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFJXaXNlai5GcmFtZXdvcmssIFZlcnNpb249My4wLjAuMCwgQ3Vs
+        dHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj0xN2JlZjM1ZTExYjg0MTcxDAMAAABRU3lzdGVtLkRy
+        YXdpbmcsIFZlcnNpb249NC4wLjAuMCwgQ3VsdHVyZT1uZXV0cmFsLCBQdWJsaWNLZXlUb2tlbj1iMDNm
+        NWY3ZjExZDUwYTNhBQEAAAAcV2lzZWouQmFzZS5SZXNwb25zaXZlUHJvZmlsZQYAAAAETmFtZQlGbG93
+        QnJlYWsDJEFkCExvY2F0aW9uBFNpemUGTWFyZ2luAQQEBAQEMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVBy
+        b2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZhbHVlAgAAABhTeXN0ZW0uRHJhd2luZy5SZWN0YW5nbGUDAAAA
+        FFN5c3RlbS5EcmF3aW5nLlBvaW50AwAAABNTeXN0ZW0uRHJhd2luZy5TaXplAwAAABFXaXNlai5XZWIu
+        UGFkZGluZwIAAAACAAAABgQAAAAFUGhvbmUJBQAAAAX6////GFN5c3RlbS5EcmF3aW5nLlJlY3Rhbmds
+        ZQQAAAABeAF5BXdpZHRoBmhlaWdodAAAAAAICAgIAwAAAEQCAACnAgAA8v///3ICAAAF+f///xRTeXN0
+        ZW0uRHJhd2luZy5Qb2ludAIAAAABeAF5AAAICAMAAAADAAAABAAAAAX4////E1N5c3RlbS5EcmF3aW5n
+        LlNpemUCAAAABXdpZHRoBmhlaWdodAAACAgDAAAAUgIAADUAAAAF9////xFXaXNlai5XZWIuUGFkZGlu
+        ZwUAAAAEX2FsbAdfYm90dG9tBV9sZWZ0Bl9yaWdodARfdG9wAAAAAAABCAgICAIAAAAAAwAAAAMAAAAD
+        AAAABAAAAAUFAAAAMldpc2VqLkJhc2UuUmVzcG9uc2l2ZVByb2ZpbGUrRXh0ZW5kZWRQcm9wZXJ0eVZh
+        bHVlAgAAAAVWYWx1ZQhQcm92aWRlcgIBAgAAAAgBAQYKAAAAEGZsb3dMYXlvdXRQYW5lbDEL
+</value>
+  </data>
   <metadata name="$this.RulerSnapLines" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
